# anki-mcp

./: .mcp.json  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: language-learning.md
.github/workflows/: publish.yml
skills/language-learning/references/: examples.md  proficiency-levels.md
src/anki/: __init__.py  server.py
src/anki/tools/: __init__.py  add_note.py  check_connection.py  get_model_fields.py  update_note.py
src/anki_mcp/: __init__.py  server.py
src/anki_mcp/prompts/: __init__.py  language_learning.py
src/anki_mcp/resources/: __init__.py  search_syntax.py
src/anki_mcp/tools/: add_or_update_notes.py  find_cards.py  find_notes.py  get_collection_overview.py  get_review_stats.py  suspend_cards.py  utils.py
tests/: test_add_or_update_notes.py  test_check_connection.py  test_find_cards.py  test_find_notes.py  test_get_collection_overview.py  test_get_review_stats.py  test_language_learning_prompt.py  test_search_syntax_resource.py  test_suspend_cards.py
