[project]
name = "anki"
version = "0.1.0"
description = "An Anki MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "mcp>=1.5.0",]
[[project.authors]]
name = "Johannes Wiebe"
email = "johannes.wiebe@flexciton.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
anki = "anki:main"
