[project]
name = "anki-mcp"
version = "0.2.0"
description = "An Anki MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "mcp>=1.5.0",
]
[[project.authors]]
name = "Johannes Wiebe"
email = "johanneswiebe@posteo.de"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "duckdb>=1.2.1",
    "pytest-asyncio>=1.3.0",
    "coverage>=7.13.0",
    "ruff>=0.11.0",
]

[project.scripts]
anki-mcp = "anki_mcp:main"
